--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@ function close_layer(name){
 	.main:hover img:first-child{display:none} 
 	.main:hover img:last-child{display:inline-block}
 
-	#layer1{position:absolute; left:246px; top:109px; width:600px; z-index:0; display:none;}
-	#layer2{position:absolute; left:350px; top:400px; width:800px; z-index:0;display:none;}
-	#layer3{position:absolute; left:1000px; top:300px; width:500px; z-index:0;display:none;}
-	#layer4{position:absolute; left:300px; top:300px; width:400px; height:240px; z-index:0;display:none;}
-	#layer5{position:absolute; left:1100px; top:50px; width:400px; height:240px; z-index:0;display:none;}
-
+	#layer1{position:absolute; left:86px; top:89px; width:600px; z-index:0; display:none;}
+	#layer2{position:absolute; left:190px; top:380px; width:800px; z-index:0;display:none;}
+	#layer3{position:absolute; left:840px; top:180px; width:500px; z-index:0;display:none;}
+	#layer4{position:absolute; left:1140px; top:30px; width:400px; z-index:0;display:none;}
+	#layer5{position:absolute; left:940px; top:520px; width:660px; z-index:0;display:none;}
+	#layer6{position:absolute; left:550px; top:50px; width:400px; z-index:0;display:none;}
+	#layer7{position:absolute; left:550px; top:50px; width:400px; z-index:0;display:none;}
 
 </style>
 
@@ -46,7 +47,7 @@ function close_layer(name){
 
 	<a href="#" onclick="view_layer('layer2');">
 		<div id="layer1"> 
-			<img src="./img/A_1.png" onmouseover="this.src='./img/A_1_h.png';" onmouseout="this.src='./img/A_1.png';"title="아싸_0명" style="width: 100%; height: auto;"><!-- 창1 이미지 -->
+			<img src="./img/A_1.png" onmouseover="this.src='./img/A_1_h.png';" onmouseout="this.src='./img/A_1_h.png';"title="아싸_0명" style="width: 100%; height: auto;"><!-- 창1 이미지 -->
 
 		<!--	<a href="#" onclick="close_layer('layer1');">X</a> -->
 		</div> 
@@ -55,7 +56,7 @@ function close_layer(name){
 
 	<a href="#" onclick="view_layer('layer3');">
 		<div id="layer2" > 
-			<img src="./img/A_2.png" onmouseover="this.src='./img/jj.gif';" onmouseout="this.src='./img/A_2.png';"title="대외활동형 아싸_12명" style="width: 100%; height: auto;"><!-- 창2 이미지 -->
+			<img src="./img/A_2.png" onmouseover="this.src='./img/jj.gif';" onmouseout="this.src='./img/jj.gif';"title="대외활동형 아싸_12명" style="width: 100%; height: auto;"><!-- 창2 이미지 -->
 		<!--	<a href="#" onclick="close_layer('layer2');">X</a> -->
 		</div> 
 	</a> 
@@ -63,7 +64,7 @@ function close_layer(name){
 
 	<a href="#" onclick="view_layer('layer4');">
 		<div id="layer3" > 
-			<img src="./img/A_3.png" onmouseover="this.src='./img/A_3_h.png';" onmouseout="this.src='./img/A_3.png';"title="대외활동형 아싸_3명" style="width: 100%; height: auto;"><!-- 창3 이미지 -->
+			<img src="./img/A_3.png" onmouseover="this.src='./img/jj_3.gif';" onmouseout="this.src='./img/jj_3.gif';"title="대외활동형 아싸_3명" style="width: 100%; height: auto;"><!-- 창3 이미지 -->
 		<!--	<a href="#" onclick="close_layer('layer3');">X</a> -->
 		</div> 
 	</a> 
@@ -71,18 +72,33 @@ function close_layer(name){
 
 	<a href="#" onclick="view_layer('layer5');">
 		<div id="layer4" > 
-			<img src="./img/1_1.png" title="대외활동형 아싸_0명" style="width: 100%; height: auto;"><!-- 창4 이미지 --> 
+			<img src="./img/A_4.png" onmouseover="this.src='./img/jj_4.gif';" onmouseout="this.src='./img/jj_4.gif';"title="인간관계형 아싸_3명" style="width: 100%; height: auto;"><!-- 창4 이미지 --> 
 		<!--	<a href="#" onclick="close_layer('layer4');">X</a> -->
 		</div> 
 	</a> 
 
-	
-		<a href="#" onclick="close_layer('layer1');close_layer('layer2');close_layer('layer3');close_layer('layer4');close_layer('layer5');" title="대외활동형 아싸_0명" style="width: 100%; height: auto;">
+
+	<a href="#" onclick="view_layer('layer6');">
 		<div id="layer5" > 
-			<img src="./img/A_sticker.png"><!-- 창5 이미지 --> 
+			<img src="./img/A_5.png" onmouseover="this.src='./img/jj_5.gif';" onmouseout="this.src='./img/jj_5.gif';"title="대외활동형 아싸_6명" style="width: 100%; height: auto;"><!-- 창3 이미지 -->
+		<!--	<a href="#" onclick="close_layer('layer3');">X</a> -->
 		</div> 
 	</a> 
 
+	<a href="#" onclick="view_layer('layer7');">
+		<div id="layer6" > 
+			<img src="./img/A_sticker.png" onmouseover="this.src='./img/A_sticker_h.png';" onmouseout="this.src='./img/A_sticker.png';"title="1주일간 만난 사람은?" style="width: 100%; height: auto;"><!-- 창3 이미지 -->
+		<!--	<a href="#" onclick="close_layer('layer3');">X</a> -->
+		</div> 
+	</a> 
+
+	<a href="#" onclick="close_layer('layer1');close_layer('layer2');close_layer('layer3');close_layer('layer4');close_layer('layer5'); close_layer('layer6'); close_layer('layer7');">
+		<div id="layer7" > 
+			<img src="./img/A_sticker_back.png" title="처음으로 돌아가려면 누르세요" style="width: 100%; height: auto;"><!-- 창3 이미지 -->
+		<!--	<a href="#" onclick="close_layer('layer3');">X</a> -->
+		</div> 
+	</a> 
+	
 
 
 </div>
